# libstempo

./: .flake8  .gitignore  .pre-commit-config.yaml  GWsim-stub.h  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  emcee.py  html_github.tpl  index.html  install_tempo2.sh  libstempo-demo.html  libstempo-demo.ipynb  libstempo-toasim-demo.html  libstempo-toasim-demo.ipynb  libstempo.pyx  like.py  make.sh  multinest.py  params.json  plot.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  toasim.py
.github/workflows/: ci_tests.yml
data/: B1953+29_NANOGrav_dfg+12.par
demo/: B1953+29-simulate.par  B1953+29-simulate.tim  foo.par  foo.tim  libstempo-demo-cvs.ipynb  libstempo-demo.ipynb  libstempo-toasim-demo.ipynb
demo/.ipynb_checkpoints/: libstempo-demo-checkpoint.ipynb
libstempo/: .gitignore  GWsim-stub.h  __init__.py  __init__.py.in  _find_tempo2.py  eccUtils.py  ecc_vs_nharm.txt  emcee.py  fit.py  libstempo.pyx  like.py  multinest.py  plot.py  spharmORFbasis.py  t2fit-stub.h  toasim.py  utils.py
tests/: test_fakepulsar.py  test_imports.py  test_pulsar.py
